🐛 fix(search-api): bound Lucene collection to prevent OOM (#4967)
The REST search API collected all matching Lucene documents into
memory before paginating, causing OutOfMemoryError on large indexes.
For a broad full-text query like "magical" across all projects, the
unbounded re-collection path in SearchEngine loaded every matching
ScoreDoc into heap.

Root cause: searchMultiDatabase() passes paging=false, triggering a
re-query with totalHits as the collection limit when results exceed
the initial hitsPerPage*cachePages window.

Fix: add SearchEngine.setMaxDocs(int) to cap Lucene collection at the
caller-supplied bound. When set, the initial search uses maxDocs as
the collection limit and the re-collection block is skipped entirely,
keeping heap usage O(maxDocs) instead of O(totalHits).

SearchController sets maxDocs = startDocIndex + maxResults before
calling engine.search(), so collection is bounded to exactly what the
caller needs. getTotalHits() is exposed to preserve the accurate total
count in the API response.